# Simulation-Server

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeListsOld.txt  Doxyfile  LICENSE.txt  README.md  Simulation Server.sln  Simulation Server.vcxproj  Simulation Server.vcxproj.filters
Doc/html/: annotated.html  annotated_dup.js  blood__cell__factory_8hpp_source.html  blood__cell__presets_8hpp_source.html  blood__cells__def__type_8hpp_source.html  blood__cells__definition_8hpp_source.html  camera_8hpp_source.html  class_cuda_threads-members.html  class_cuda_threads.html  class_cylinder_solid_color_shader-members.html  class_cylinder_solid_color_shader.html  class_geometry_pass_shader-members.html  class_geometry_pass_shader.html  class_instanced_model-members.html  class_instanced_model.html  class_instanced_model.js  class_instanced_object_mesh-members.html  class_instanced_object_mesh.html  class_instanced_object_mesh.js  class_mesh-members.html  class_mesh.html  class_mesh.js  class_model-members.html  class_model.html  class_model.js  class_msg_controller-members.html  class_msg_controller.html  class_msg_controller.js  class_msg_receiver-members.html  class_msg_receiver.html  class_multi_object_mesh-members.html  class_multi_object_mesh.html  class_multi_object_mesh.js  class_multiple_object_model-members.html  class_multiple_object_model.html  class_multiple_object_model.js  class_offscreen_controller-members.html  class_offscreen_controller.html  class_phong_deferred_shader-members.html  class_phong_deferred_shader.html  (+140 more)
Doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js
Libraries/: CMakeLists.txt
Libraries/include/assimp/: SpatialSort.h
Libraries/include/glm/: common.hpp
Libraries/include/glm/detail/: type_vec3.inl
Libraries/include/glm/gtc/: noise.inl
Models/Cylinder/: cylinder.mtl
Shaders/: cylindersolidcolor.vert  geometry.frag  geometry.vert  phong_deferred.frag  phong_forward.frag  phong_forward.vert  phong_forward_spheres.vert  solidcolor.vert  solidcolor_spheres.vert  spring.frag  spring.vert  veinsolidcolor.frag  veinsolidcolor.vert
containers/: build_container.sh  run_container.sh  sigularity_build_and_run.def  singularity_build_and_run.def  slurm_run.sh
src/: CMakeLists.txt  main.cu
src/communication/: msg_controller.cpp  msg_controller.hpp  msg_receiver.cpp  msg_receiver.hpp  server_endpoint.cpp  server_endpoint.hpp
src/config/: CMakeLists.txt  blood_cell_presets.hpp  blood_cells_definition.hpp  graphics.hpp  physics.cuh  physics.hpp  simulation.hpp  vein_definition.hpp
src/graphics/: CMakeLists.txt  camera.cpp  camera.hpp  glcontroller.cu  glcontroller.cuh  inputcontroller.cpp  inputcontroller.hpp  light.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  offscreencontroller.cpp  offscreencontroller.hpp  shader.cpp  shader.hpp  spheremeshgenerator.cpp  spheremeshgenerator.hpp  spring_lines.cpp  spring_lines.hpp  streamingcontroller.cpp  streamingcontroller.hpp  videocontroller.cpp  videocontroller.hpp  windowcontroller.cpp  windowcontroller.hpp
src/graphics/textures/: CMakeLists.txt  texture_loading.cpp
src/grids/: base_grid.cuh  grid_definition.hpp  no_grid.cuh  uniform_grid.cu  uniform_grid.cuh
src/meta_factory/: blood_cell_factory.hpp  blood_cells_def_type.hpp  mp_helpers.hpp  multi_gpu.hpp  vein_factory.hpp
src/objects/: blood_cells.cu  blood_cells.cuh  blood_cells_def_type.hpp  cylindermesh.hpp  particles.cuh  sphere_generator.hpp  vein_generator.hpp  vein_neighbors.cu  vein_neighbors.cuh  vein_triangles.cu  vein_triangles.cuh
src/simulation/: particle_collisions.cuh  physics.cuh  simulation_controller.cu  simulation_controller.cuh  vein_collisions.cu  vein_collisions.cuh  vein_end.cu  vein_end.cuh
src/utilities/: CMakeLists.txt  constexpr_vec.hpp  cuda_handle_error.cuh  cuda_threads.hpp  cuda_vec3.cu  cuda_vec3.cuh  host_device_array.cuh  math.cuh  nccl_operations.cuh  vertex_index_enum.hpp
tests/: CMakeLists.txt  sample_test.cpp
tests/samples/: sample_cuda_test.cu
tests/samples/sample_cuda_code/: vector_add.cu  vector_add.cuh
tests/utilities/: constexpr_vec_tests.cpp  cuda_threads_tests.cpp  cuda_vec3_tests.cu  math_tests.cu
